// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BlissInput disabled 1`] = `
<label
  className="sc-bwzfXH dLySTc"
  htmlFor="disabled-input"
  style={undefined}
>
  <input
    autoFocus={undefined}
    className="is-empty sc-bdVaJa kljVmq"
    disabled={true}
    id={undefined}
    name="disabled-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="cant see me"
    required={undefined}
    type="text"
  />
  <span
    className="sc-htpNat crOuwT"
  >
    <span
      className="sc-bxivhb lgZwhc"
    >
      Cant do it
    </span>
  </span>
</label>
`;

exports[`Storyshots BlissInput simple input 1`] = `
<label
  className="sc-bwzfXH dLySTc"
  htmlFor="simple-input"
  style={undefined}
>
  <input
    autoFocus={undefined}
    className="is-empty sc-bdVaJa kljVmq"
    disabled={undefined}
    id={undefined}
    name="simple-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Leeroy Jenkins"
    required={undefined}
    type="text"
  />
  <span
    className="sc-htpNat crOuwT"
  >
    <span
      className="sc-bxivhb lgZwhc"
    >
      Name
    </span>
  </span>
</label>
`;

exports[`Storyshots BlissInput with all the props 1`] = `
<label
  className="sc-bwzfXH dLySTc"
  htmlFor="email-input"
  style={undefined}
>
  <input
    autoFocus={true}
    className="is-empty sc-bdVaJa kljVmq"
    disabled={undefined}
    id={undefined}
    name="email-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="leeroy@pals4life.com"
    required={undefined}
    type="email"
  />
  <span
    className="sc-htpNat crOuwT"
  >
    <span
      className="sc-bxivhb lgZwhc"
    >
      Email
    </span>
  </span>
</label>
`;

exports[`Storyshots Button simple text 1`] = `
<button
  className="Button sc-VigVT mcseS"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Button when urgent 1`] = `
<button
  className="Button sc-VigVT dYVVhK"
  onClick={[Function]}
>
  Cancel
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="Button sc-VigVT mcseS"
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Card Simple card example 1`] = `
<div
  className="sc-ifAKCX dCftLo"
  style={undefined}
>
  <p>
    Hey there!
  </p>
</div>
`;

exports[`Storyshots Divider Simple example 1`] = `
<div
  className="sc-EHOje dRtGCZ"
  style={undefined}
>
  <strong
    className="sc-bZQynM gHiNos"
  >
    Or
  </strong>
</div>
`;

exports[`Storyshots HeroImage Simple hero image 1`] = `
<div
  className="sc-dnqmqq gqQuRj"
>
  <div
    className="sc-htoDjs atCfa"
  >
    <div
      className="sc-gzVnrw kWJMCx"
    />
    <div
      className="sc-iwsKbI faknkt"
    >
      flume
    </div>
  </div>
</div>
`;

exports[`Storyshots LoadingIndicator simple example 1`] = `
<div
  className="sc-gZMcBi huJRSc"
>
  <div
    className="sc-jTzLTM kIZKII"
  />
  <div
    className="sc-fjdhpX kUAxSE"
  />
  <div
    className="sc-jzJRlG gRbzpm"
  />
  <div
    className="sc-cSHVUG bufuPv"
  />
  <div
    className="sc-kAzzGY hfsqzL"
  />
  <div
    className="sc-chPdSV fiygyT"
  />
  <div
    className="sc-kgoBCf fIOgLR"
  />
  <div
    className="sc-kGXeez brHubx"
  />
  <div
    className="sc-kpOJdX jmIaKu"
  />
  <div
    className="sc-dxgOiQ WEnZR"
  />
  <div
    className="sc-ckVGcZ hhDdRm"
  />
  <div
    className="sc-jKJlTe bexFnL"
  />
</div>
`;

exports[`Storyshots ThumbImage Album cover example 1`] = `
<div
  className="sc-gqjmRU jNFonX"
  height="150px"
  style={undefined}
  width="150px"
/>
`;
